--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chroma-js": "^2.1.0",
     "jss": "^10.4.0",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
