--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jss": "^10.4.0",
     "rc-slider": "^9.6.1",
     "react": "^17.0.1",
+    "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-form-validator-core": "^1.0.0",
