--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-form-validator-core": "^1.0.0",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-sortable-hoc": "^1.11.0",
