--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "array-move": "^3.0.1",
     "chroma-js": "^2.1.0",
     "jss": "^10.4.0",
     "rc-slider": "^9.6.1",
