--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "array-move": "^3.0.1",
     "chroma-js": "^2.1.0",
+    "emoji-mart": "^3.0.0",
     "jss": "^10.4.0",
     "rc-slider": "^9.6.1",
     "react": "^17.0.1",
