--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ChrisB32.github.io/Color-Project",
   "name": "color-project",
   "version": "0.1.0",
   "private": true,
@@ -22,12 +23,14 @@
     "react-form-validator-core": "^1.0.0",
     "react-material-ui-form-validator": "^2.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^1.1.5",
     "react-sortable-hoc": "^1.11.0",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
